# atac-smk

./: .gitignore  README.md  Snakefile  TO_DOs.txt  main.py  notes.md  pyproject.toml
config/: config.yml
notebooks/: find_max_frip.py  join_qc_data.ipynb  main.py  make_custom_multiqc_data.ipynb  plot_fragment_length_distr.py  pyproject.toml  rDHS-Anchor-UMAP.ipynb  run_jill_ccre_pipeline.ipynb  split_bedpe_pseudoreps.py
profile/slurm/: config.yaml
workflow/rules/: bam_to_tagalign.smk  bedgraphtobigwig.smk  bowtie2_align.smk  bowtie2_build.smk  chrombpnet.smk  chrombpnet_stuff.smk  common.smk  fastp.smk  filter.smk  frag_len.smk  frip_all.smk  macs3_callpeak.smk  macs3_signal.smk  multiqc.smk  picard.smk  pseudoreplicated_peaks.smk  psudoreplicated_peaks.smk  tss_enrichment.smk
workflow/rules/envs/: idr.yaml
workflow/rules/scripts/: bam_to_tagalign.py  calculate_frip.py  overlap_peaks_jill.py  plot_fragment_length_distr.py  run_multiqc.py  tss_enrichment.py
