[project]
name = "atac-smk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pathos>=0.3.4",
    "plotly[express]>=6.3.1",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]
